myk8s/testapp.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: contraprova-new-staff
  namespace: dev
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: contraprova-new-staff
  template:
    metadata:
      labels:
        app: contraprova-new-staff
        ou: contraprova
    spec:
      containers:
      - name: contraprova-new-staff
        image: 304243956035.dkr.ecr.us-east-1.amazonaws.com/contraprova-new-staff:build154-b89e2ce
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 25
          periodSeconds: 30 # how long to wait between checks
          successThreshold: 1 # how many successes to hit before accepting
          failureThreshold: 6 # how many failures to accept before failing
          timeoutSeconds: 15 # how long to wait for a response
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 25
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 6
          timeoutSeconds: 15
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "1Gi"
            cpu: "50m"
        ports:
        - containerPort: 80
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: Name
                operator: In
                values:
                - devGeneral

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contraprova-new-staff
  namespace: dev
  labels:
    ou: contraprova
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "SESSIONFRONT"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "30"
    nginx.ingress.kubernetes.io/session-cookie-expires: "30"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    
spec:
  rules:
  - host:  contraprova-new-staff.dev.iron.fit
    http:
      paths:
      - path: /
        backend:
          serviceName: contraprova-new-staff
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: contraprova-new-staff
  namespace: dev
  labels:
    app: contraprova-new-staff
    ou: contraprova
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  type: ClusterIP
  selector:
    app: contraprova-new-staff
